# my_package_test

./: README.md  assignment2.ipynb  assignment2.md  pyproject.toml
package_test_bif1/: meta.yaml
src/package_test_BIF1/: cli.py
