[project]
name = "package_test_BIF1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "laura.patinomedina@wur.nl", email = "laura.patinomedina@wur.nl" }
]
requires-python = ">=3.12"
dependencies = [
    "pytest>=8.3.5",
    "ruff>=0.11.2",
    "typer>=0.15.2",
]

[project.scripts]
cli = "package_test_BIF1.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[pytest]
addopts = "--doctest-modules"

[tool.hatch.build.targets.wheel]
packages = ["src/package_test_BIF1"]
